# DebugTraces

./: CMakeLists.txt  CMakePresets.json  README.md
.githooks/: pre-push
.github/: WORKFLOWS.md
.github/workflows/: build-test.yml  ci.yml  quality-assurance.yml  release.yml
cmake/: .clang-format  .clang-tidy  DebugTracingConfig.cmake.in  run-quality-checks.sh
scripts/: check_api_abi.sh
src/: DebugTracesC.h  DebugTracesLib.h  Logger.cpp  Logger.h  TraceColors.h  Writer.cpp  Writer.h
tests/: dbgtracing_gtest.cpp  test_disabled.cpp  test_enabled.cpp  test_thread_format.cpp  test_thread_id_format.cpp  test_trace_macros.cpp
